fixed overflow in mobile devices

--- a/src/components/Notes.module.css
+++ b/src/components/Notes.module.css
@@ -1,6 +1,7 @@
 .container_wraper {
   margin: 0 auto;
   max-width: 900px;
+  overflow: hidden;
 }
 .container {
   margin: 0 10px;
